# ner

./: .gitignore  docker-compose.yml
.github/workflows/: first-action.yml  test.yml
backend/: Dockerfile  lint.sh  main.py  pyproject.toml
